# curricmesh-public

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 194259011028_course_builder_draft_model.py  3fa58fc52cc5_initial_schema.py  50c6435b1713_freshness_pipeline_tables.py  50d0a66cf0d4_ccr_target_version.py  69b6ae8d3aba_ccr_external_link.py  895dc028e5f4_unique_approval_per_approver_per_ccr.py  a1c3d5e7f9b0_qa_review_evidence.py  a3b5c7d9e1f2_content_version_media_refs.py  a8c0e2f4b6d8_ccr_change_set.py  b2d4f6a8c0e1_multi_tenant_rls.py  b3c5d7e9f1a2_gap_assessments.py  b7d9f1a3c5e2_content_chunks.py  b7d9f1a3c5e7_media_transcripts.py  c3e5a7b9c1d3_version_pins.py  c4e6a8b0d2f4_tutor_conversations.py  c4e6f8a0b2d4_sync_targets.py  c7e1a9f4d2b6_ai_call_events.py  d3f5b7a9c1e4_generation_jobs.py  d4f6a8c0e1b3_sync_logs.py  (+6 more)
backend/app/: api_errors.py  config.py  database.py  main.py  tenant.py  tenant_scope.py
backend/docs/: AGENT_LESSONS.md
backend/scripts/: backfill_source_urls.py  freshness_pipeline_run.py  reset_demo_data.py  seed_prod.py  seed_sync_target.py  seed_watchlist.py  smoke_delivery.py  smoke_media_r2.py  smoke_slide_render.py  verify_qa_sees_content.py
backend/seed/: __init__.py  bootcamp_curriculum.py  load_agentic_mastery.py  load_sota.py
backend/tests/: conftest.py  test_health.py
(+471 files in other folders)
